# Learn

./: .gitignore  LICENSE  README.md
helloworld/: CMakeLists.txt  helloworld.cpp
student/: CMakeLists.txt
student/src/: Student.cpp
student_bin/: CMakeLists.txt
student_bin/src/: main.cpp
student_shared_lib/: CMakeLists.txt
student_static_lib/: CMakeLists.txt
student_static_lib/include/: Student.h
